added php boilerplate

--- a/wordsearch.html
+++ b/wordsearch.html
@@ -9,7 +9,7 @@
 	
 	<!-- stylesheet(s) -->
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="wordsearch.css">
 
 </head>
 
@@ -22,7 +22,7 @@
 			<label>Number of Columns:</label> <input type="text" name="cols" value="12" size="4" required><br>
 			<label>Number of Rows:</label> <input type="text" name="rows" value="12" size="4" required><br>
 			<label>Enter Search Terms:</label><br>
-			<textarea rows="15" cols="25" name="spellingWords">Insert one word per line.</textarea>
+			<textarea rows="15" cols="15" name="spellingWords">Insert one word per line.</textarea>
 			<input type="submit" value="Create Wordsearch">
 		</fieldset>
 	</form>
