--- a/wordsearch.html
+++ b/wordsearch.html
@@ -21,7 +21,7 @@
 			<label>Name of Puzzle:</label> <input type="text" name="puzzleName" required><br>
 			<label>Number of Columns:</label> <input type="text" name="cols" value="12" size="4" required><br>
 			<label>Number of Rows:</label> <input type="text" name="rows" value="12" size="4" required><br>
-			<label>Enter Search Terms:</label><br>
+			<label>Enter Spelling Words:</label><br>
 			<textarea rows="15" cols="15" name="spellingWords">Insert one word per line.</textarea>
 			<input type="submit" value="Create Wordsearch">
 		</fieldset>
